<resources>
    <string name="app_name">FaceRecognition</string>
    <string name="title_activity_identities_editor">Identities in database</string>
    <string name="title_activity_add_identity">Register new identity</string>

    <!-- AddIdentity -->
    <string name="labelPlaceholder">Insert name</string>
    <string name="sendAlertCheckBoxText">Start alarm when detected</string>

    <string name="info_add_success">Identity added to database</string>
    <string name="info_edit_success">New samples added to identity</string>
    <string name="error_no_name">Must specify a name</string>
    <string name="error_name_duplicate">This name is already used in the database</string>
    <string name="error_not_enough_samples">Not enough samples! Need at least %1$d </string>
    <string name="importTitle">Import database</string>
    <string name="exportTitle">Export database</string>
    <string name="title_activity_camera2_face_recognition">Camera2FaceRecognition</string>
    <string name="clearDatabase">Clear database</string>

    <string name="clearFormButtonText">Clear form</string>
    <string name="saveIdentityButtonText">Save identity</string>
    <string name="addSamplesButtonText">Add samples</string>

    <string name="unselectAllButtonText">Unselect all</string>
    <string name="selectAllButtonText">Select all</string>
    <string name="addSelectedButtonText">Add</string>

    <string name="AuthorizedText">Authorized</string>
    <string name="NonAuthorizedText">Not authorized</string>
    <string name="face_sample_description">Face sample</string>
    <string name="add_new_identity_toolbar">Add New Identity</string>
    <string name="select_from_unclassified_faces">Select from unclassified</string>
    <string name="title_activity_select_from_unclassified">SelectFromUnclassifiedActivity</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>

</resources>
