<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddIdentityActivity"
    tools:showIn="@layout/activity_add_identity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/identityLabelField"
            android:text="@string/labelPlaceholder"

            android:focusedByDefault="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
        />

        <CheckBox
            android:id="@+id/sendAlertCheckbox"
            android:text="@string/sendAlertCheckBoxText"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        />


        <GridView
            android:id="@+id/previewsView"

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            android:numColumns="3"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="?android:buttonBarStyle">
            <Button
                android:id="@+id/clearFormButton"
                android:text="@string/clearFormButtonText"

                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
            />
            <Button
                android:id="@+id/saveIdentityButton"
                android:text="@string/saveIdentityButtonText"

                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
            />
            <Button
                android:id="@+id/addSamplesButton"
                android:text="@string/addSamplesButtonText"

                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
            />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>